# samp

./: .gitignore  CONTRIBUTING.md  README.md  codecov.yml  pyrightconfig.json
.github/workflows/: ci.yml  coverage.yml
e2e/: extrinsic-vectors.json  scale-vectors.json  test-vectors.json
e2e/generator/: Cargo.toml
e2e/generator/src/: main.rs
go/: README.md  conformance_test.go  crypto.go  crypto_test.go  extrinsic.go  extrinsic_test.go  go.mod  go.sum  metadata.go  metadata_test.go  samp.go  samp_test.go  scale.go  scale_test.go  secret.go  ss58.go  ss58_test.go  types.go
python/: .gitignore  README.md  pyproject.toml
python/samp/: __init__.py  encryption.py  error.py  extrinsic.py  metadata.py  scale.py  secret.py  signing.py  ss58.py  transport.py  types.py  wire.py
python/samp-crypto/: Cargo.toml  pyproject.toml
python/samp-crypto/src/: lib.rs
python/tests/: test_conformance.py  test_crypto.py  test_encryption.py  test_extrinsic.py  test_metadata.py  test_round_trip.py  test_scale.py  test_ss58.py  test_types.py  test_wire.py
references/client-template/: main.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: encryption.rs  error.rs  extrinsic.rs  lib.rs  metadata.rs  scale.rs  secret.rs  ss58.rs  types.rs  wire.rs
rust/tests/: conformance.rs  extrinsic.rs  metadata.rs  property.proptest-regressions  property.rs  round_trip.rs  scale.rs
specs/: samp-v1.md  samp.md
typescript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/src/: crypto.ts  error.ts  extrinsic.ts  index.ts  metadata.ts  scale.ts  secret.ts  ss58.ts  types.ts  wire.ts
typescript/test/: conformance.test.ts  crypto.test.ts  extrinsic.test.ts  metadata.test.ts  scale.test.ts  signing.test.ts  ss58.test.ts  types.test.ts  wire.test.ts
