[package]
name = "samp-core"
version = "1.1.0"
edition = "2021"
description = "Substrate Account Messaging Protocol — reference implementation"
license = "MIT"
repository = "https://github.com/samp-org/samp"
keywords = ["substrate", "messaging", "sr25519", "encryption", "ristretto255"]
categories = ["cryptography"]

[lib]
name = "samp"

[dependencies]
schnorrkel = "0.11"
curve25519-dalek = { version = "4", features = ["digest"] }
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
getrandom = "0.3"
hex = "0.4"
zeroize = "1"
parity-scale-codec = "3"
blake2 = "0.10"
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
proptest = "1"
