[package]
name = "samp-test-vectors"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
samp = { path = "../../rust" }
schnorrkel = "0.11"
curve25519-dalek = { version = "4", features = ["digest"] }
hkdf = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
chacha20poly1305 = "0.10"
getrandom = "0.3"
